--- a/packages/bootstrap/scss/badge/_variables.scss
+++ b/packages/bootstrap/scss/badge/_variables.scss
@@ -1,36 +1,71 @@
 // Badge
-$badge-padding-x: $badge-padding-x !default;
-$badge-padding-y: $badge-padding-y !default;
-$badge-border-width: 1px !default;
-$badge-border-radius: $badge-border-radius !default;
-$badge-font-size: $badge-font-size !default;
-$badge-line-height: 1 !default;
 
-$badge-padding-x-sm: ( $badge-padding-x / 2 ) !default;
-$badge-padding-y-sm: ( $badge-padding-y / 2 ) !default;
-$badge-border-width-sm: $badge-border-width !default;
-$badge-border-radius-sm: $kendo-border-radius-sm !default;
-$badge-font-size-sm: ( $badge-font-size * .8333333333 ) !default;
-$badge-line-height-sm: 1 !default;
+/// Width of the border around the badge.
+/// @group badge
+$kendo-badge-border-width: 1px !default;
 
-$badge-padding-x-lg: ( $badge-padding-x * 1.5 ) !default;
-$badge-padding-y-lg: ( $badge-padding-y * 1.5 ) !default;
-$badge-border-width-lg: $badge-border-width !default;
-$badge-border-radius-lg: $kendo-border-radius-lg !default;
-$badge-font-size-lg: ( $badge-font-size * 1.1666666666 ) !default;
-$badge-line-height-lg: 1.25 !default;
+/// Border radius of the badge.
+/// @group badge
+$kendo-badge-border-radius: $badge-border-radius !default;
 
-$badge-fixed-size: 20px !default;
-$badge-calc-size: calc( #{$badge-line-height * 1em} + #{$badge-padding-y * 2} + #{$badge-border-width * 2} ) !default;
-$badge-size: if( $use-calc-badge-size, $badge-calc-size, $badge-fixed-size ) !default;
-$badge-dot-size: 10px !default;
 
-$badge-fixed-size-sm: 15px !default;
-$badge-calc-size-sm: calc( #{$badge-line-height-sm * 1em} + #{$badge-padding-y-sm * 2} + #{$badge-border-width-sm * 2} ) !default;
-$badge-size-sm: if( $use-calc-badge-size, $badge-calc-size-sm, $badge-fixed-size-sm ) !default;
-$badge-dot-size-sm: 6px !default;
+/// Horizontal padding of the badge.
+/// @group badge
+$kendo-badge-padding-x: $badge-padding-x !default;
+$kendo-badge-padding-x-sm: ( $badge-padding-x / 2 ) !default;
+$kendo-badge-padding-x-md: $badge-padding-x !default;
+$kendo-badge-padding-x-lg: ( $badge-padding-x * 1.5 ) !default;
 
-$badge-fixed-size-lg: 30px !default;
-$badge-calc-size-lg: calc( #{$badge-line-height-lg * 1em} + #{$badge-padding-y-lg * 2} + #{$badge-border-width-lg * 2} ) !default;
-$badge-size-lg: if( $use-calc-badge-size, $badge-calc-size-lg, $badge-fixed-size-lg ) !default;
-$badge-dot-size-lg: 12px !default;
+/// Vertical padding of the badge.
+/// @group badge
+$kendo-badge-padding-y: $badge-padding-y !default;
+$kendo-badge-padding-y-sm: ( $badge-padding-y / 2 )  !default;
+$kendo-badge-padding-y-md: $badge-padding-y !default;
+$kendo-badge-padding-y-lg: ( $badge-padding-y * 1.5 ) !default;
+
+/// Font sizes of the badge.
+/// @group badge
+$kendo-badge-font-size: $badge-font-size !default;
+$kendo-badge-font-size-sm: $badge-font-size !default;
+$kendo-badge-font-size-md: $badge-font-size !default;
+$kendo-badge-font-size-lg: $badge-font-size !default;
+
+/// Line heights used along with $font-size.
+/// @group badge
+$kendo-badge-line-height: 1 !default;
+$kendo-badge-line-height-sm: $kendo-badge-line-height !default;
+$kendo-badge-line-height-md: $kendo-badge-line-height !default;
+$kendo-badge-line-height-lg: $kendo-badge-line-height !default;
+
+/// Badge min width used for circle badge.
+/// @group badge
+$kendo-badge-min-width: calc( #{$kendo-badge-line-height * 1em} + #{$kendo-badge-padding-y * 2} + #{$kendo-badge-border-width * 2}) !default;
+$kendo-badge-min-width-sm: calc( #{$kendo-badge-line-height-sm * 1em} + #{$kendo-badge-padding-y-sm * 2} + #{$kendo-badge-border-width * 2} ) !default;
+$kendo-badge-min-width-md: calc( #{$kendo-badge-line-height-md * 1em} + #{$kendo-badge-padding-y-md * 2} + #{$kendo-badge-border-width * 2} ) !default;
+$kendo-badge-min-width-lg: calc( #{$kendo-badge-line-height-lg * 1em} + #{$kendo-badge-padding-y-lg * 2} + #{$kendo-badge-border-width * 2} ) !default;
+
+/// Sizes map for the badge.
+/// @group badge
+$kendo-badge-sizes: (
+    sm: (
+        padding-x: $kendo-badge-padding-x-sm,
+        padding-y: $kendo-badge-padding-y-sm,
+        font-size: $kendo-badge-font-size-sm,
+        line-height: $kendo-badge-line-height-sm,
+        min-width: $kendo-badge-min-width-sm
+    ),
+    md: (
+        padding-x: $kendo-badge-padding-x-md,
+        padding-y: $kendo-badge-padding-y-md,
+        font-size: $kendo-badge-font-size-md,
+        line-height: $kendo-badge-line-height-md,
+        min-width: $kendo-badge-min-width-md
+    ),
+    lg: (
+        padding-x: $kendo-badge-padding-x-lg,
+        padding-y: $kendo-badge-padding-y-lg,
+        font-size: $kendo-badge-font-size-lg,
+        line-height: $kendo-badge-line-height-lg,
+        min-width: $kendo-badge-min-width-lg
+    )
+) !default;
