--- a/packages/default/scss/badge/_theme.scss
+++ b/packages/default/scss/badge/_theme.scss
@@ -2,7 +2,7 @@
 
     // Solid badges
     @each $name, $color in $kendo-theme-colors {
-        .k-badge-solid.k-badge-#{$name} {
+        .k-badge-solid-#{$name} {
             border-color: $color;
             color: contrast-wcag( $color );
             background-color: $color;
@@ -16,7 +16,7 @@
     }
 
     @each $name, $color in $kendo-theme-colors {
-        .k-badge-outline.k-badge-#{$name} {
+        .k-badge-outline-#{$name} {
             color: $color;
         }
     }
