--- a/packages/fluent/scss/badge/_theme.scss
+++ b/packages/fluent/scss/badge/_theme.scss
@@ -20,7 +20,7 @@
         $_bg: map-get( $color-props, bg );
         $_border: map-get( $color-props, border );
 
-        .k-badge-solid.k-badge-#{$theme-color} {
+        .k-badge-solid-#{$theme-color} {
             --kendo-badge-text: var( --kendo-badge-#{$theme-color}-text, #{$_text} );
             --kendo-badge-bg: var( --kendo-badge-#{$theme-color}-bg, #{$_bg} );
             --kendo-badge-border: var( --kendo-badge-#{$theme-color}-border, #{$_border} );
@@ -29,10 +29,9 @@
 
     @each $theme-color, $color-props in $kendo-theme-colors-contrast {
         $_text: map-get( $color-props, bg );
-        $_bg: $kendo-component-bg;
         $_border: map-get( $color-props, border );
 
-        .k-badge-outline.k-badge-#{$theme-color} {
+        .k-badge-outline-#{$theme-color} {
             --kendo-badge-text: var( --kendo-badge-#{$theme-color}-text, #{$_text} );
             --kendo-badge-border: var( --kendo-badge-#{$theme-color}-border, #{$_border} );
         }
