fix(input): give flat picker background-color on hover state

--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -341,7 +341,7 @@
         @include border-radius( 0 !important ); // sass-lint:disable-line no-important
         border-width: $kendo-input-border-width 0;
         border-top-color: transparent !important; // sass-lint:disable-line no-important
-        background: none !important; // sass-lint:disable-line no-important
+        background-image: none !important; // sass-lint:disable-line no-important
 
         &:focus,
         &.k-focus {
@@ -351,6 +351,10 @@
 
     .k-input-outline {
         background: none !important; // sass-lint:disable-line no-important
+    }
+
+    .k-picker.k-picker-flat {
+        @include border-radius( $kendo-input-flat-border-radius !important ); // sass-lint:disable-line no-important
     }
 
 
