--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -81,6 +81,10 @@ $kendo-input-outline-bg: null !default;
 $kendo-input-outline-text: $base-text !default;
 $kendo-input-outline-border: rgba( $base-text, .5 ) !default;
 
+$kendo-input-flat-bg: transparent !default;
+$kendo-input-flat-text: null !default;
+$kendo-input-flat-border: null !default;
+
 $kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
 
 $kendo-picker-bg: $kendo-button-bg !default;
@@ -114,6 +118,14 @@ $kendo-picker-outline-border: null !default;
 $kendo-picker-outline-hover-bg: $kendo-button-text !default;
 $kendo-picker-outline-hover-text: $body-bg !default;
 $kendo-picker-outline-hover-border: null !default;
+
+$kendo-picker-flat-bg: transparent !default;
+$kendo-picker-flat-text: null !default;
+$kendo-picker-flat-border: null !default;
+
+$kendo-picker-flat-hover-bg: rgba( $kendo-button-text, .08 ) !default;
+$kendo-picker-flat-hover-text: null !default;
+$kendo-picker-flat-hover-border: null !default;
 
 $kendo-input-placeholder-text: $input-placeholder-color !default;
 $kendo-input-placeholder-opacity: 1 !default;
