--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -91,6 +91,10 @@ $kendo-input-flat-focus-border: null !default;
 
 $kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
 
+$kendo-input-flat-bg: transparent !default;
+$kendo-input-flat-text: null !default;
+$kendo-input-flat-border: null !default;
+
 $kendo-input-flat-border-radius: null !default;
 
 $kendo-picker-bg: $kendo-button-bg !default;
@@ -141,6 +145,14 @@ $kendo-picker-flat-focus-shadow: null !default;
 $kendo-picker-outline-hover-bg: null !default;
 $kendo-picker-outline-hover-text: null !default;
 $kendo-picker-outline-hover-border: null !default;
+
+$kendo-picker-flat-bg: transparent !default;
+$kendo-picker-flat-text: null !default;
+$kendo-picker-flat-border: null !default;
+
+$kendo-picker-flat-hover-bg: null !default;
+$kendo-picker-flat-hover-text: null !default;
+$kendo-picker-flat-hover-border: null !default;
 
 $kendo-input-placeholder-text: $subtle-text !default;
 $kendo-input-placeholder-opacity: 1 !default;
