--- a/packages/default/scss/input/_theme.scss
+++ b/packages/default/scss/input/_theme.scss
@@ -173,4 +173,31 @@
             );
         }
     }
+
+    // Flat
+    .k-input-flat {
+        @include fill (
+            $kendo-input-flat-text,
+            $kendo-input-flat-bg,
+            $kendo-input-flat-border
+        );
+    }
+
+    .k-picker-flat {
+        @include fill (
+            $kendo-picker-flat-text,
+            $kendo-picker-flat-bg,
+            $kendo-picker-flat-border
+        );
+
+        &:hover,
+        &.k-hover {
+            @include fill (
+                $kendo-picker-flat-hover-text,
+                $kendo-picker-flat-hover-bg,
+                $kendo-picker-flat-hover-border
+            );
+        }
+    }
+
 }
