fix(input): update flat input border-color on focus to match design

--- a/packages/default/scss/input/_theme.scss
+++ b/packages/default/scss/input/_theme.scss
@@ -181,6 +181,15 @@
             $kendo-input-flat-bg,
             $kendo-input-flat-border
         );
+
+        &:focus,
+        &.k-focus {
+            @include fill (
+                $kendo-input-flat-focus-text,
+                $kendo-input-flat-focus-bg,
+                $kendo-input-flat-focus-border
+            );
+        }
     }
 
     .k-picker-flat {
