--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -85,6 +85,10 @@ $kendo-input-flat-bg: transparent !default;
 $kendo-input-flat-text: null !default;
 $kendo-input-flat-border: null !default;
 
+$kendo-input-flat-focus-bg: null !default;
+$kendo-input-flat-focus-text: null !default;
+$kendo-input-flat-focus-border: $primary !default;
+
 $kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
 
 $kendo-picker-bg: $kendo-button-bg !default;
