--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -95,6 +95,10 @@ $kendo-input-flat-bg: transparent !default;
 $kendo-input-flat-text: null !default;
 $kendo-input-flat-border: null !default;
 
+$kendo-input-flat-focus-bg: null !default;
+$kendo-input-flat-focus-text: null !default;
+$kendo-input-flat-focus-border: null !default;
+
 $kendo-input-flat-border-radius: null !default;
 
 $kendo-picker-bg: $kendo-button-bg !default;
