fix(input): ensure correct styles are applied to input and picker when in invalid state

--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -131,6 +131,11 @@ $kendo-picker-flat-hover-bg: rgba( $kendo-button-text, .08 ) !default;
 $kendo-picker-flat-hover-text: null !default;
 $kendo-picker-flat-hover-border: null !default;
 
+$kendo-picker-flat-focus-bg: transparent !default;
+$kendo-picker-flat-focus-text: null !default;
+$kendo-picker-flat-focus-border: $primary !default;
+$kendo-picker-flat-focus-shadow: $kendo-input-focus-shadow !default;
+
 $kendo-input-placeholder-text: $input-placeholder-color !default;
 $kendo-input-placeholder-opacity: 1 !default;
 
