--- a/packages/default/scss/input/_variables.scss
+++ b/packages/default/scss/input/_variables.scss
@@ -131,6 +131,11 @@ $kendo-picker-flat-hover-bg: rgba( $kendo-button-text, .04 ) !default;
 $kendo-picker-flat-hover-text: null !default;
 $kendo-picker-flat-hover-border: rgba( $kendo-button-border, .16 ) !default;
 
+$kendo-picker-flat-focus-bg: null !default;
+$kendo-picker-flat-focus-text: null !default;
+$kendo-picker-flat-focus-border: null !default;
+$kendo-picker-flat-focus-shadow: null !default;
+
 $kendo-input-placeholder-text: $subtle-text !default;
 $kendo-input-placeholder-opacity: 1 !default;
 
