fix(colorpalette): use k-selected for selected state

--- a/packages/default/scss/colorpalette/_theme.scss
+++ b/packages/default/scss/colorpalette/_theme.scss
@@ -16,7 +16,9 @@
         }
 
         &.k-state-selected,
-        &.k-state-selected:hover {
+        &.k-state-selected:hover,
+        &.k-selected,
+        &.k-selected:hover {
             @include box-shadow( $colorpalette-tile-selected-shadow );
         }
 
