fix(pager): ensure text inside pager does not wrap when pager is not responsive

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -921,8 +921,7 @@
     }
 
     .k-grid-content,
-    .k-grid-content-locked,
-    .k-pager-wrap {
+    .k-grid-content-locked {
         white-space: normal;
     }
 
