--- a/packages/material/scss/button/_variables.scss
+++ b/packages/material/scss/button/_variables.scss
@@ -167,7 +167,7 @@ $kendo-button-disabled-shadow: none !default;
 
 // Solid button
 $kendo-solid-button-gradient: null !default;
-$kendo-solid-button-shade-function: "try-shade";
+$kendo-solid-button-shade-function: "try-shade" !default;
 $kendo-solid-button-shade-text-amount: null !default;
 $kendo-solid-button-shade-bg-amount: 0 !default;
 $kendo-solid-button-shade-border-amount: 0 !default;
