fix(chat): add pre-wrap to chat messages

--- a/packages/default/scss/chat/_layout.scss
+++ b/packages/default/scss/chat/_layout.scss
@@ -142,6 +142,7 @@
             border-style: solid;
             line-height: $chat-bubble-line-height;
             word-wrap: break-word;
+            white-space: pre-wrap;
 
             a {
                 color: inherit;
