--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -103,7 +103,7 @@ $kendo-picker-hover-border: $kendo-button-hover-border !default;
 $kendo-picker-hover-gradient: $kendo-button-hover-gradient !default;
 $kendo-picker-hover-shadow: $kendo-button-hover-shadow !default;
 
-$kendo-picker-focus-bg: $kendo-button-focus-bg !default;
+$kendo-picker-focus-bg: $kendo-button-active-bg !default;
 $kendo-picker-focus-text: $kendo-button-focus-text !default;
 $kendo-picker-focus-border: $kendo-button-focus-border !default;
 $kendo-picker-focus-gradient: $kendo-button-focus-gradient !default;
