--- a/packages/default/scss/taskboard/_layout.scss
+++ b/packages/default/scss/taskboard/_layout.scss
@@ -181,8 +181,10 @@
             overflow-wrap: anywhere;
 
             &:focus,
+            &.k-focus,
             &.k-state-focus,
             &:hover,
+            &.k-hover,
             &.k-state-hover {
                 text-decoration: underline;
             }
