fix(floatinglabel): placeholder should be transparent if floating label is not focused

--- a/packages/default/scss/floating-label/_layout.scss
+++ b/packages/default/scss/floating-label/_layout.scss
@@ -61,7 +61,8 @@
             transform: scale( $floating-label-focus-scale );
         }
 
-        &.k-state-empty:not(.k-state-focused) ::placeholder {
+        &.k-state-empty:not(.k-state-focused) ::placeholder,
+        &.k-empty:not(.k-focus):not(:focus-within) ::placeholder {
             color: transparent;
         }
 
