--- a/packages/material/scss/input/_variables.scss
+++ b/packages/material/scss/input/_variables.scss
@@ -123,6 +123,15 @@ $kendo-picker-outline-hover-bg: null !default;
 $kendo-picker-outline-hover-text: null !default;
 $kendo-picker-outline-hover-border: null !default;
 
+$kendo-picker-outline-focus-bg: nul !default;
+$kendo-picker-outline-focus-text: null !default;
+$kendo-picker-outline-focus-border: null !default;
+$kendo-picker-outline-focus-shadow: null !default;
+
+$kendo-picker-outline-hover-focus-bg: null !default;
+$kendo-picker-outline-hover-focus-text: null !default;
+$kendo-picker-outline-hover-focus-border: null !default;
+
 $kendo-picker-flat-bg: transparent !default;
 $kendo-picker-flat-text: null !default;
 $kendo-picker-flat-border: null !default;
