--- a/packages/material/scss/menu/_index.scss
+++ b/packages/material/scss/menu/_index.scss
@@ -6,7 +6,7 @@
 @import "../popup/_index.scss";
 @import "../list/_index.scss";
 @import "../icons/_index.scss";
-@import "../button/_variables.scss";
+@import "../button/_index.scss";
 
 
 // Component
