fix(menu): make scroll button selector more specific

--- a/packages/default/scss/menu/_theme.scss
+++ b/packages/default/scss/menu/_theme.scss
@@ -92,7 +92,7 @@
 
 
     // Scrolling
-    .k-menu-scroll-button {
+    .k-menu-scroll-wrapper .k-menu-scroll-button {
         @include fill(
             $menu-scroll-button-text,
             $menu-scroll-button-bg,
