--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -347,6 +347,9 @@
         &.k-focus {
             @include border-radius( $kendo-input-flat-border-radius !important ); // sass-lint:disable-line no-important
         }
+        &:focus-within {
+            @include border-radius( $kendo-input-flat-border-radius !important ); // sass-lint:disable-line no-important
+        }
     }
 
     .k-input-outline {
