--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -132,7 +132,6 @@ $kendo-picker-outline-hover-focus-bg: $kendo-picker-outline-hover-bg !default;
 $kendo-picker-outline-hover-focus-text: $kendo-picker-outline-hover-text !default;
 $kendo-picker-outline-hover-focus-border: $kendo-picker-outline-hover-border !default;
 
-
 $kendo-picker-flat-bg: transparent !default;
 $kendo-picker-flat-text: null !default;
 $kendo-picker-flat-border: null !default;
@@ -145,6 +144,10 @@ $kendo-picker-flat-focus-bg: transparent !default;
 $kendo-picker-flat-focus-text: null !default;
 $kendo-picker-flat-focus-border: $kendo-picker-focus-border !default;
 $kendo-picker-flat-focus-shadow: $kendo-picker-focus-shadow !default;
+
+$kendo-picker-flat-hover-focus-bg: rgba( $kendo-button-text, .08 ) !default;
+$kendo-picker-flat-hover-focus-text: null !default;
+$kendo-picker-flat-hover-focus-border: null !default;
 
 $kendo-input-placeholder-text: $input-placeholder-color !default;
 $kendo-input-placeholder-opacity: 1 !default;
