--- a/packages/material/scss/input/_variables.scss
+++ b/packages/material/scss/input/_variables.scss
@@ -145,6 +145,10 @@ $kendo-picker-flat-focus-text: null !default;
 $kendo-picker-flat-focus-border: null !default;
 $kendo-picker-flat-focus-shadow: null !default;
 
+$kendo-picker-flat-hover-focus-bg: null !default;
+$kendo-picker-flat-hover-focus-text: null !default;
+$kendo-picker-flat-hover-focus-border: null !default;
+
 $kendo-input-placeholder-text: $subtle-text !default;
 $kendo-input-placeholder-opacity: 1 !default;
 
