--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -91,16 +91,6 @@ $kendo-input-flat-focus-border: null !default;
 
 $kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
 
-$kendo-input-flat-bg: transparent !default;
-$kendo-input-flat-text: null !default;
-$kendo-input-flat-border: null !default;
-
-$kendo-input-flat-focus-bg: null !default;
-$kendo-input-flat-focus-text: null !default;
-$kendo-input-flat-focus-border: null !default;
-
-$kendo-input-flat-border-radius: null !default;
-
 $kendo-picker-bg: $kendo-button-bg !default;
 $kendo-picker-text: $kendo-button-text !default;
 $kendo-picker-border: $kendo-button-border !default;
@@ -129,8 +119,8 @@ $kendo-picker-outline-bg: transparent !default;
 $kendo-picker-outline-text: null !default;
 $kendo-picker-outline-border: $kendo-button-text !default;
 
-$kendo-picker-outline-hover-bg: null !default;
-$kendo-picker-outline-hover-text: null !default;
+$kendo-picker-outline-hover-bg: $kendo-button-text !default;
+$kendo-picker-outline-hover-text: $body-bg !default;
 $kendo-picker-outline-hover-border: null !default;
 
 $kendo-picker-outline-focus-bg: transparent !default;
